# cloverity_test

./: README.md  pyproject.toml
src/: main.py
src/utils/: calculations.py  create_chart.py  csv_reader.py
