[project]
name = "cloverity_test"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "dimakohanskyi",email = "dimakohanskyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
